fixed input and button spacing

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -2,9 +2,10 @@
   width: 250px;
 }
 
+
 .label {
   color: black;
-  font-size: 20px;
+  font-size: 16px;
   float: left;
   padding: 0;
   margin: auto 5px;
@@ -17,6 +18,13 @@
   padding-left: 0px;
   align-self: auto;
 }
+
+.ButtonToolbar {
+  padding: 10px;
+}
+
+
+
 
 body {
   background-color: #494747;
